--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@rushstack/eslint-patch": "^1.2.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^7.1.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "prettier": "^2.8.8",
     "vite": "^4.3.5"
-  }
+  },
+  "browserslist": "cover 99.5%"
 }
